--- a/index.html
+++ b/index.html
@@ -54,19 +54,17 @@
 							Catrin Williams
 						</h4>
 						<h5> 19 University of Birmingham</h5>
-						 <div class="card-footer">
-            </div>
 					</div>
 				</div>
 				<div class="card text-center">
 				<div class="card-block">
 					<h4 class="card-title"> Information</h4>
-					<p> Email: catrin.mair.williams@gmail.com </p>
+					<p> Email: TBC </p>
 				</div>
 			</div>
 			<div class="card text-center">
 				<div class="card-block">
-					<h4 class="card-title"> personality traits for this legend </h4>
+					<h4 class="card-title"> More info  </h4>
 					<div class="progress">
   <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
 </div>
@@ -77,7 +75,7 @@
   <div class="progress-bar bg-warning" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">clueless</div>
 </div>
 <div class="progress" style="height: 40px;">
-  <div class="progress-bar bg-danger" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">leader of a cult</div>
+  <div class="progress-bar bg-danger" role="progressbar" style="width: 50%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">loves clothes</div>
 </div>
 			</div>			
 		</div>
@@ -94,7 +92,16 @@
            <div class="card">
             <div class="card-block">
               <h4 class="card-title">Fashion Diaries contents</h4>
-              <p class="card-text"> random article </p>
+              <p class="card-text"> random articles i will be doing </p>
+              <p class="card-text"> will confirm these later</p>
 			</div>
+		</div>
+		<div class="card">
+            <div class="card-block">
+              <h4 class="card-title">Video</h4>
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/lf-KVEXIoqM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			</div>
+		</div>
+	</div>
 </body>
 </html>
