--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
               My Fashion Diary<br>
             </h2>
             <p class="lead">
-              <a class="btn btn-primary btn-lg" href="#">Read More</a>
+              <a class="btn btn-primary btn-lg" href="./pages/contact.html">Read More</a>
             </p>
           </div>
         </div>
