--- a/pages/contact.html
+++ b/pages/contact.html
@@ -16,7 +16,7 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#"> My Fashion Diary<span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="../index.html"> My Fashion Diary</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Contact</a>
