--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
       <li class="nav-item active">
         <a class="nav-link" href="#"> My Fashion Diary<span class="sr-only">(current)</span></a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Contact</a>
+      <li class="nav-item active">
+        <a class="nav-link" href="./pages/contact.html">Contact</a>
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Posts
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Action</a>
+          <a class="dropdown-item" href="./pages/article.html">Action</a>
           <a class="dropdown-item" href="#">Another action</a>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="#">Something else here</a>
@@ -62,7 +62,7 @@
               My Fashion Diary<br>
             </h2>
             <p class="lead">
-              <a class="btn btn-primary btn-lg" href="./pages/contact.html">Read More</a>
+              <a class="btn btn-primary btn-lg" href="./pages/article.html">Read More</a>
             </p>
           </div>
         </div>
