--- a/pages/article.html
+++ b/pages/article.html
@@ -1,1 +1,94 @@
-article.html
+<!DOCTYPE html>
+<html>
+<head>
+	<title> My Fashion Diary</title>
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+	<link rel="stylesheet" type="text/css" href="../css/arty.css">
+</head>
+<body>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="#"></a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="#"> My Fashion Diary<span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Contact</a>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Posts
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="#">Action</a>
+          <a class="dropdown-item" href="#">Another action</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="#">Something else here</a>
+        </div>
+      </li>
+      <div class="socialmediasights">
+      <li class="nav-item">
+        <a class="nav-link" href="#">
+        			 <span style="font-size: 25px; color: Tomato;">
+  						<i class="fab fa-youtube"></i>
+					</span>
+					<span style="font-size: 25px; color: Dodgerblue;">
+  					<i class="fab fa-twitter"></i>
+					</span>
+					<span style="font-size: 25px;">
+  					<span style="color: Mediumslateblue;">
+  					<i class="fab fa-instagram"></i>
+  					</span>
+					</span>
+        </a>
+      </li>
+      </div>
+    </ul>
+  </div>
+</nav>
+		<div class="row">
+			<div class="col-md-3">
+				<div class="card text-center">
+					<div class="card-block">
+					</div>
+				</div>
+			</div>
+		</div>
+	<div class="row">
+		<div class="col-md-6">
+			<div class="card text-center">
+				<div class="card-block">
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-md-3">
+			<div class="card text-center">
+				<div class="card-block">
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="jumbotron">
+            <h1 class="display-3">Blog 1</h1>
+            <h2 class="display-1">
+              I love looking back at old photographs and from that I love looking at the type of styles and think that some stuff look so cool now. even in old movies we dee <br>
+            </h2>
+            </div>
+            <p class="lead">
+              <a class="btn btn-primary btn-lg" href="./pages/contact.html">Contact</a>
+            </p>
+          </div>
+        </div>
+    </div>
+    </div>
+    </div>
+</body>
+</html>
